# almagest

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: auto-bump.yml  python-publish.yml
almagest/: abstract_data_exporter.py  client_helper.py  data_normalizer.py
almagest/dsl_query/: __init__.py  dsl_sync_helper.py  fluent_dsl_client.py
almagest/dsl_query/mixins/: agg.py  base_mixin.py  date.py  match.py  pager.py  update.py
almagest/templates/: celestrak_catalog_template.yml  dnd_catalog_historical.yml  dnd_catalog_snapshot.yml  dnd_deltav_protect.yml  dnd_deltav_public.yml  dnd_gcat_catalog.yml  dnd_rotas.yml
almagest/util/: template_generator.py
almagest/util/logging/: simple_logger.py
almagest/util/requests/: requests_header_helper.py  simple_session.py
scripts/: set_pip_configuration.sh  setup_python_environment.sh
tests/test_data/data_normalizer/: udl_elsets.json
tests/test_data/notifs/: notif_data.json
tests/unit/: conftest.py
tests/unit/data_normalizer/: test_data_normalizer.py
tests/unit/dsl_query/: test_agg_mixin.py  test_date_mixin.py  test_fluent_chaining.py  test_match_mixin.py  test_pager_mixin.py  test_update_mixin.py
