[project]
name = "almagest"
version = "3.1.1"
description = "Module for interfacing with the SDA Tap Lab opensearch instance"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ICR", email = "gstewart@icr-team.com" }]
dependencies = [
  "APScheduler>=3.10.3",
  "nested_lookup>=0.2.25",
  "numpy",
  "opensearch-dsl",
  "opensearch-py",
  "opensearch-logger",
  "pandas",
  "python-json-logger==2.0.7",
  "pyOpenSSL",
  "PyYAML",
]
  
[project.optional-dependencies]
dev = [
  "commitizen==4.8.3",
  "flake8-pytest-style==2.1.0",
  "flake8==7.3.0",
  "almagest[test]",
  "pre-commit",
  "ruff==0.12.3"
]
  
test = [
  "mockito==1.5.4",
  "pytest-cov==6.2.1",
  "pytest==8.4.1"
]
  
build = [
  "build==1.2.2.post1",
  "wheel==0.45.1"
]
  
deploy = [
  "twine==6.1.0"
]
  
[tool.commitizen]
name = "cz_conventional_commits"
version_files = [
    "pyproject.toml:version"
]
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = false
annotated_tag = true
bump_message = "release $current_version → $new_version"
  
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
  
[tool.hatch.version]
path = "almagest/__init__.py"
  
[tool.hatch.build.targets.sdist]
include = [
    "almagest/*",
]
  
[tool.hatch.build.targets.wheel]
packages = ["almagest"]
  
[tool.pytest.ini_options]
# Allows tests in unit and integration directories with the same name to be discovered.
addopts = "--import-mode=importlib"
  
[tool.coverage.paths]
source = ["almagest", "*/site-packages"]